--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -98,6 +98,8 @@ Beware the country code must be made of two upper case letters.
 For further information on country codes, refer to the online https://www.iso.org/obp/ui/#search[list of alpha-2 codes].
 +
 
+// This looks strange: The (important!) hint for the country code to require upper case only is part of the "City" field and the top "Country Code" only appears as tip.
+
 [TIP]
 .Country Code
 ====
