--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -168,6 +168,8 @@ configure-tftpsync.sh
 ----
 +
 
+// here it is unclear that the script needs to be run on the proxy (it gets clearer only by the next topic which says you also need to configure the server
+
 It asks for hostname and IP address of the {productname} Server and of the proxy itself.
 Additionally, it asks for the tftpboot directory on the proxy.
 
