--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -217,7 +217,7 @@ Naturally, the replacement proxy must have the same name and IP address as its p
 
 In order to replace a {susemgrproxy} and keeping the clients registered to the proxy leave the old proxy in {productname}.
 Create a reactivation key for this system and then register the new proxy using the reactivation key.
-If you do not use the reactivation key, you will need to re-registered all the clients against the new proxy.
+If you do not use the reactivation key, you will need to re-register all the clients against the new proxy.
 
 [[proxy.migration3.replace]]
 .Procedure: Replacing a {susemgrproxy} and Keeping the Clients Registered
