--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -94,19 +94,17 @@ The default value here is the proxy's hostname.
 
 City::
 Further information attached to the proxy's certificate.
-Beware the country code must be made of two upper case letters.
-For further information on country codes, refer to the online https://www.iso.org/obp/ui/#search[list of alpha-2 codes].
-+
 
-// This looks strange: The (important!) hint for the country code to require upper case only is part of the "City" field and the top "Country Code" only appears as tip.
-
-[TIP]
-.Country Code
-====
+Country Code::
 In the [guimenu]``country code`` field, enter the country code set during the {productname} installation.
 For example, if your proxy is in the US and your {productname} is in DE, enter `DE` for the proxy.
-====
 +
+
+[TIP] .Country Code
+====
+Beware the country code must be made of two upper case letters.
+For further information on country codes, refer to the online https://www.iso.org/obp/ui/#search[list of alpha-2 codes].
+====
 
 Cname Aliases (Separated by Space)::
 Use this if your proxy can be accessed through various DNS CNAME aliases.
