--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -95,6 +95,9 @@ The default value here is the proxy's hostname.
 City::
 Further information attached to the proxy's certificate.
 
+State::
+Further information attached to the proxy's certificate.
+
 Country Code::
 In the [guimenu]``country code`` field, enter the country code set during the {productname} installation.
 For example, if your proxy is in the US and your {productname} is in DE, enter `DE` for the proxy.
