--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -94,14 +94,14 @@ For [path]``/var/spacewalk``:
 Check the permissions with this command:
 
 ----
-ls -l /var/lib/pgsql /var/spacewalk/
+ls -l /var/lib/pgsql /var/spacewalk
 ----
 
 The output should look like this:
 
 ----
-(0750) drwxr-x--- 1 postgres postgres /var/lib/pgsql
-drwxrwxr-x 1 wwwrun   www      /var/spacewalk/
+drwxr-x--- 1 postgres postgres /var/lib/pgsql
+drwxrwxr-x 1 wwwrun   www      /var/spacewalk
 ----
 
 If required, change the permissions with these commands:
@@ -115,5 +115,5 @@ And owners with:
 
 ----
 chown postgres:postgres /var/lib/pgsql
-chown wwwrun:www /var/spacewalk/
+chown wwwrun:www /var/spacewalk
 ----
