--- a/modules/administration/pages/tshoot-packages.adoc
+++ b/modules/administration/pages/tshoot-packages.adoc
@@ -23,9 +23,7 @@ When packages on a client are locked, {productname} Server may not be able to co
 When this occurs, package updates will be available in the {webui}, but will not appear on the client, and attempts to update the client will fail.
 Check package locks and exclude lists to determine if packages are locked or excluded on the client.
 
-.Procedure: Removing Package Locks
+On the client, check package locks and exclude lists to determine if packages are locked or excluded:
 
-. On the client, check package locks and exclude lists to determine if packages are locked or excluded:
-+
 * On an Expanded Support Platform, check [path]``/etc/yum.conf`` and search for ``exclude=``.
-* On {sle}, use the [command]``zypper locks`` command.
+* On {sle} and {opensuse}, use the [command]``zypper locks`` command.
