--- a/adoc/advanced_topics_proxy_quickstart.adoc
+++ b/adoc/advanced_topics_proxy_quickstart.adoc
@@ -256,7 +256,7 @@ As the country code enter the country code set during the SUSE Manager installat
 For example, if your proxy is in US and your {productname} in DE, you must enter `DE` for the proxy.
 +
 
-[TIP] .Country Code
+[NOTE]
 ====
 Beware the country code must be made of two upper case letters.
 For further information on country codes, refer to the online https://www.iso.org/obp/ui/#search[list of alpha-2 codes].
