--- a/adoc/advanced_topics_proxy_quickstart.adoc
+++ b/adoc/advanced_topics_proxy_quickstart.adoc
@@ -258,7 +258,7 @@ For example, if your proxy is in US and your {productname} in DE, you must enter
 
 [NOTE]
 ====
-Beware the country code must be made of two upper case letters.
+The country code must be two upper case letters.
 For further information on country codes, refer to the online https://www.iso.org/obp/ui/#search[list of alpha-2 codes].
 ====
 
