--- a/adoc/advanced_topics_proxy_quickstart.adoc
+++ b/adoc/advanced_topics_proxy_quickstart.adoc
@@ -259,7 +259,7 @@ For example, if your proxy is in US and your {productname} in DE, you must enter
 [NOTE]
 ====
 The country code must be two upper case letters.
-For further information on country codes, refer to the online https://www.iso.org/obp/ui/#search[list of alpha-2 codes].
+For a complete list of country codes, see https://www.iso.org/obp/ui/#search.
 ====
 
 Cname Aliases (Separated by Space)::
