--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -103,7 +103,7 @@ In the [guimenu]``country code`` field, enter the country code set during the {p
 For example, if your proxy is in the US and your {productname} is in DE, enter `DE` for the proxy.
 +
 
-[TIP] .Country Code
+[NOTE]
 ====
 Beware the country code must be made of two upper case letters.
 For further information on country codes, refer to the online https://www.iso.org/obp/ui/#search[list of alpha-2 codes].
