--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -105,7 +105,7 @@ For example, if your proxy is in the US and your {productname} is in DE, enter `
 
 [NOTE]
 ====
-Beware the country code must be made of two upper case letters.
+The country code must be two upper case letters.
 For further information on country codes, refer to the online https://www.iso.org/obp/ui/#search[list of alpha-2 codes].
 ====
 
