--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -106,7 +106,7 @@ For example, if your proxy is in the US and your {productname} is in DE, enter `
 [NOTE]
 ====
 The country code must be two upper case letters.
-For further information on country codes, refer to the online https://www.iso.org/obp/ui/#search[list of alpha-2 codes].
+For a complete list of country codes, see https://www.iso.org/obp/ui/#search.
 ====
 
 Cname Aliases (Separated by Space)::
