--- a/modules/retail/pages/retail-components.adoc
+++ b/modules/retail/pages/retail-components.adoc
@@ -45,6 +45,7 @@ For example, an information kiosk has a high-resolution touchscreen, where a cas
 While both of these terminals require similar processing and network functionality, they will require different OS images.
 The OS images ensure that the different display mechanisms work correctly.
 
+// This should be in the Requirements section, not here. LKB 2019-10-09
 The minimum memory requirement is 1 GB for hosts that need to run OS images built with Kiwi (PXE booted or not).
 
 *Hardware Requirements for PoS Terminals:*
