remove python version

--- a/modules/salt/pages/salt-terminology.adoc
+++ b/modules/salt/pages/salt-terminology.adoc
@@ -8,7 +8,7 @@ This includes the operating system, IP addresses, network interfaces, and memory
 
 When you run a Salt command any modules and functions are run locally from the system being called.
 
-Salt modules are stored on clients and the {productname} Server within the [path]``/usr/lib/python2.7/site-packages/salt/`` directory.
+Salt modules are stored on clients and the {productname} Server within the [path]``/usr/lib/python*/site-packages/salt/`` directory.
 
 List all available grains with the [command]``grains.ls`` function:
 ----
