--- a/adoc/advanced_topics_proxy_quickstart.adoc
+++ b/adoc/advanced_topics_proxy_quickstart.adoc
@@ -250,12 +250,17 @@ The default value here is also the proxy's hostname.
 
 City::
 Further information attached to the proxy's certificate.
-Beware the country code must be made of two upper case letters.
-For further information on country codes, refer to the online https://www.iso.org/obp/ui/#search[list of alpha-2 codes].
 
 Country Code::
 As the country code enter the country code set during the SUSE Manager installation.
 For example, if your proxy is in US and your {productname} in DE, you must enter `DE` for the proxy.
++
+
+[NOTE]
+====
+The country code must be two upper case letters.
+For a complete list of country codes, see https://www.iso.org/obp/ui/#search.
+====
 
 Cname Aliases (Separated by Space)::
 Use this if your proxy server can be accessed through various DNS CNAME aliases.
