--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -164,7 +164,7 @@ configure-tftpsync.sh
 It asks for hostname and IP address of the {productname} Server and of the proxy itself.
 Additionally, it asks for the tftpboot directory on the proxy.
 
-. On the {productname} Server install [package]#susemanager-tftpsync#:
+. On the {productname} Server, install [package]``susemanager-tftpsync``:
 +
 
 ----
