Update proxy-setup.adoc (#793)
* Update proxy-setup.adoc
'State' was missing.  I think this is free text.
Co-Authored-By: Lana Brindley <lbrindley@suse.de>

--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -94,17 +94,20 @@ The default value here is the proxy's hostname.
 
 City::
 Further information attached to the proxy's certificate.
-Beware the country code must be made of two upper case letters.
-For further information on country codes, refer to the online https://www.iso.org/obp/ui/#search[list of alpha-2 codes].
-+
 
-[TIP]
-.Country Code
-====
+State::
+Further information attached to the proxy's certificate.
+
+Country Code::
 In the [guimenu]``country code`` field, enter the country code set during the {productname} installation.
 For example, if your proxy is in the US and your {productname} is in DE, enter `DE` for the proxy.
-====
 +
+
+[NOTE]
+====
+The country code must be two upper case letters.
+For a complete list of country codes, see https://www.iso.org/obp/ui/#search.
+====
 
 Cname Aliases (Separated by Space)::
 Use this if your proxy can be accessed through various DNS CNAME aliases.
