--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -1,36 +1,45 @@
 [[maintenance-window]]
-= Maintenance Window Checklist
+= Maintenance Window
 
-If you work on a {productname} Server with scheduled maintenance windows, you might find it difficult to remember all the things that you need to during that critical downtime.
+If you work with scheduled maintenance windows, you might find it difficult to remember all the things that you need to do before, during, and after that critical downtime of the {productname} Server.
+{productname} Server related systems such as Inter-Server Synchronization Slave Servers or {productname} Proxies are also affected and have to be considered.
 
-As with any {sle} system, you are encouraged to install package updates on the {susemgr} Server when they arrive.
+{suse} recommends you always keep your {productname} infrastructure updated.
+That includes servers, proxies, and build hosts.
+// It's similar to zypper at the package level:
+If you do not keep the {productname} Server updated, you might not be able to update some parts of your environment when you need to.
 
-This section contains a checklist for your maintenance window, with links to further information on performing each of the steps, if you need it.
 
 
-. Stop services.
-You will need to stop the spacewalk, SAP, and database services, along with any others you have running.
-. Check if the configuration is still correct.
-. On Salt systems, apply the highstate.
+== Server
+
+This section contains a checklist for your maintenance window, with links to further information on performing each of the steps.
+
+// ke, 2019-09-30: we'll stop spacewalk during the update
+// . Stop spacewalk services.
+// You will need to stop the spacewalk, SAP, and database services, along with any others you have running.
+// . Check if the configuration is still correct.
 . Apply the latest updates.
 See xref:upgrade:server-update.adoc[].
-. Update to the latest service pack, if required.
+. Upgrade to the latest service pack, if required.
 See xref:upgrade:migrate-4x-4x.adoc[].
-. Reboot the server.
-. Check if the configuration is still correct.
-. On Salt systems, apply the highstate.
-. Start any stopped services.
+// We reboot during the above listed procedures.
+// . Reboot the server.
+// . Check if the configuration is still correct.
+// . Start any stopped services.
+. Run [command]``spacewalk-service status`` and check whether all required services are up and running.
 
+For information about database schema upgrades and PostgreSQL migrations, see xref:upgrades:db-migration.adoc[].
 
 You can install updates using your package manager.
 For information on using {yast}, see https://www.suse.com/documentation/sles-15/book_sle_admin/data/cha_onlineupdate_you.html).
 For information on using zypper, see https://www.suse.com/documentation/sles-15/book_sle_admin/data/sec_zypper.html).
 
 ////
-
 Preferable, you will run such a tool within a maintenance window; for more information, see xref:administration:maintenance-window.adoc#maintenance-window[].
 
- complete procedure, also see above:
+complete procedure, also see above:
+
 1. Log in as root user to the SUSE Manager server.
 2. Stop the Spacewalk service:
    spacewalk-service stop
@@ -44,8 +53,8 @@ Preferable, you will run such a tool within a maintenance window; for more infor
 By default, several update channels are configured and enabled for the {susemgr} Server.
 New and updated packages will become available automatically.
 
-To keep {susemgr} up to date, you must have it connected directly to {scc}.
-Alternatively, for disconnected environments, you can use {rmtool} (RMT) as a local installation source.
+To keep {susemgr} up to date, either connect it directly to {scc} or use {rmtool} (RMT).
+You can use RMT as a local installation source for disconnected environments.
 
 You can check that the update channels are available on your system with this command:
 
@@ -79,10 +88,37 @@ For example, the major release 4.0 will be incremented to 4.0.1 when an MU is re
 You can verify which version you are running by looking at the bottom of the navigation bar in the {webui}.
 You can also fetch the version number with the [literal]``api.getVersion()`` XMLRPC API call.
 
-To upgrade to the latest MU, you can use the [command]``zypper migration`` command at the command prompt:
+// To upgrade to the latest MU, you can use the [command]``zypper migration`` command at the command prompt:
+// 
+// ----
+// zypper migration
+// ----
+// 
+// This procedure is also known as a Service Pack (SP) migration.
 
-----
-zypper migration
-----
 
-This procedure is also known as a Service Pack (SP) migration.
+
+=== Refreshing Client Tools After Server Update
+
+When the server is updated consider to update some tools on the clients, too.
+Updating [package]``salt-minion``, [package]``zypper``, and other related management package on clients is not a strict requirement, but it is a best practice in general.
+For example, a maintenance update on the server might introduce a major new Salt version.
+Then minions will continue to work but might experience problems later on.
+To avoid this always update the salt-minion package when available.
+{suse} makes sure that [package]``salt-minion`` can always be updated safely.
+
+
+
+== Inter-Server Synchronization Slave Server
+
+Inter-server synchronization slave servers should be updated as soon as
+the update of the main server (master server) is completed.
+
+
+
+== Proxy
+
+Proxies should be updated as soon as Server updates are complete.
+In general, running a Proxy connected to a Server on a different version is not supported. The only exception is for the duration of updates where it is expected that the Server is updated first, so the Proxy could run the previous version temporarily.
+Especially in a version 3.2 to 4.0 migration you should upgrade the server first, then any proxy.
+For more information, see xref:upgrade:proxy-update.adoc[] and xref:upgrade:proxy-migration.adoc[].
