--- a/modules/upgrade/pages/server-update.adoc
+++ b/modules/upgrade/pages/server-update.adoc
@@ -1,10 +1,17 @@
 [[update.suse.manager]]
 = {productname} Server Update
 
-Before you perform any update, it is important to ensure you have the latest versions of all installed packages.
-Then you will upgrade the database schema.
+This update procedure covers simple package updates or a concerted micro update, which is also known as a maintenance update (MU).
+During a MU the user stops services, updates packages, runs the script to update the database, and restarts services.
+Example: [literal]``4.0.1`` → [literal]``4.0.2``.
 
-.Procedure: Updating the {productname} Server
+This means first you ensure that you have the latest version of all installed packages installed.
+Then you can upgrade the database schema.
+
+.Procedure: Updating Packages on the {productname} Server
+
+By default, several update channels are configured and enabled for the {productname} Server.
+New and updated packages will become available automatically.
 
 . On the {productname} Server, at the command prompt, as root, stop the spacewalk services:
 +
@@ -23,9 +30,9 @@ zypper patch
 ----
 
 
-.Procedure: Updating the Database Schema
+.Procedure: Upgrading the Database Schema
 
-If a patch includes a new database schema update, you will need to use the [command]``spacewalk-schema-upgrade`` command.
+If a patch includes a new database schema upgrade, you will need to use the [command]``spacewalk-schema-upgrade`` command.
 
 . On the {productname} Server, at the command prompt, as root, ensure the database service is running:
 +
@@ -49,3 +56,5 @@ Services affected by a package update are not automatically restarted after an u
 You need to restart these services manually to avoid potential failures.
 Use [command]``zypper ps`` to check for applications that are using old code and require restarting.
 ====
+
+Reboot the server if a patch update recommends rebooting.
