--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -29,7 +29,7 @@ See xref:upgrade:migrate-4x-4x.adoc[].
 // . Start any stopped services.
 . Run [command]``spacewalk-service status`` and check whether all required services are up and running.
 
-For information about database schema upgrades and PostgreSQL migrations, see xref:upgrades:db-migration.adoc[].
+For information about database schema upgrades and PostgreSQL migrations, see xref:upgrade:db-migration.adoc[].
 
 You can install updates using your package manager.
 For information on using {yast}, see https://www.suse.com/documentation/sles-15/book_sle_admin/data/cha_onlineupdate_you.html).
