more xref fixes

--- a/modules/retail/pages/retail-network-arch.adoc
+++ b/modules/retail/pages/retail-network-arch.adoc
@@ -17,7 +17,7 @@ Branch servers provide services for PXE boot, and act as an image cache, Salt br
 The branch server can also manage local networking, and provide DHCP and DNS services.
 
 {smr} Branch servers are implemented as enhanced {susemgr} Proxy servers.
-For technical background information on {smr} Branch servers, see also the documentation on {susemgr} Proxy servers (xref:installation/install-proxy-unified.adoc[]).
+For technical background information on {smr} Branch servers, see also the documentation on {susemgr} Proxy servers (xref:installation:install-proxy-unified.adoc[]).
 
 
 
