--- a/modules/retail/pages/retail-components.adoc
+++ b/modules/retail/pages/retail-components.adoc
@@ -2,7 +2,7 @@
 = Components
 
 {smr} is made up of various components.
-For more on how these components work together, see xref:modules/retail/pages/retail-network-arch.adoc[].
+For more on how these components work together, see xref:retail-network-arch.adoc[].
 
 
 
