--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -53,8 +53,10 @@ complete procedure, also see above:
 By default, several update channels are configured and enabled for the {susemgr} Server.
 New and updated packages will become available automatically.
 
+ifeval::[{suma-content} == true]
 To keep {susemgr} up to date, either connect it directly to {scc} or use {rmtool} (RMT).
 You can use RMT as a local installation source for disconnected environments.
+endif::[]
 
 You can check that the update channels are available on your system with this command:
 
