use documentation.suse.com

--- a/modules/upgrade/pages/db-migration.adoc
+++ b/modules/upgrade/pages/db-migration.adoc
@@ -4,10 +4,10 @@
 This is about PostgreSQL database migration.
 
 If you want to upgrade {productname} 3.2 to {productname} 4 you must check whether {productname} 3.2 is already based on PostgreSQL version 10.
-If you are already using PostreSQL version 10, skip this section.
+If you are already using PostreSQL 10, skip this section.
 If you are using an older version, such as version 9.6, you must migrate PostgreSQL to version 10 before you begin the database migration.
-For more information about migrating PostgreSQL 9.6 to version 10, see xref:db-migration.adoc#db-migration-prepare[].
-If you run PostgreSQL{nbsp}9.4 on {productname} 3.2, see the 3.2 product documentation: https://www.suse.com/documentation/suse-manager-3/3.2/susemanager-best-practices/html/book.suma.best.practices/bp.sp.migration.html#sp.migration.postgresql.
+For more information about migrating PostgreSQL 9.6 to version 10, see xref:db-migration.adoc#db-migration-prepare[].
+If you run PostgreSQL{nbsp}9.4 on {productname} 3.2, see the 3.2 product documentation: https://documentation.suse.com/external-tree/en-us/suma/3.2/susemanager-best-practices/html/book.suma.best.practices/bp.sp.migration.html#sp.migration.postgresql
 You cannot migrate directly from PostgreSQL{nbsp}9.4 to version 10.
 
 
@@ -21,7 +21,7 @@ You cannot migrate directly from PostgreSQL{nbsp}9.4 to version 10.
 * {productname} 3.2.10, SLES 12 SP3, Postgres 9.6
 * {productname} 3.2.10, SLES 12 SP3, Postgres 10
 * {productname} 3.2.10, SLES 12 SP4, Postgres 10
-* {productname} 4.0.1, SLES 15 SP1, Postgres 10
+* {productname} 4.0.0, SLES 15 SP1, Postgres 10
 
 ////
 
