--- a/modules/upgrade/pages/server-update.adoc
+++ b/modules/upgrade/pages/server-update.adoc
@@ -37,7 +37,7 @@ If a patch includes a new database schema upgrade, you will need to use the [com
 . On the {productname} Server, at the command prompt, as root, ensure the database service is running:
 +
 ----
-postgresql start
+systemctl start postgresql
 ----
 . Perform the schema update:
 +
