--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -86,7 +86,7 @@ Do not change the hostname during the process.
 Be careful when you log in to your systems during migration, as they will both show the same hostname.
 ====
 
-To speed up the actual migration and thus reducing the database downtime, you can copy the system data in advance.
+To speed up the actual migration and thus reducing the server downtime, you can copy the system data in advance.
 For more information, see <<migration.troubleshooting.systemdata>>.
 
 
