--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -140,7 +140,7 @@ For big installations this can take up to several hours.
 You also need to account for the time it takes to copy all the package data to the target system.
 Depending on your network infrastructure and hardware, this can also take a significant amount of time.
 
-You can copy the data at any time before or after the migration process.
+You can copy the data at any time before the migration process.
 Copying the data before you migrate can significantly reduce the amount of downtime required.
 
 .Procedure: Migrating System Data
