Add note about non-routable

--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -4,6 +4,14 @@
 You can monitor your {productname} environment using Prometheus and Grafana.
 {productname} Server and Proxy are able to provide self-health metrics, or install and manage a limited number of Prometheus exporters on Salt clients.
 
+[NOTE]
+====
+{productname} does not currently support monitoring with Prometheus in private, non-routable networks.
+Prometheus must be able to establish network communications with monitored clients.
+If your clients are using a non-routable network with a reserved IP range, they will not be able to be contact the Prometheus server.
+====
+
+
 Prometheus is a monitoring tool that is used to record real-time metrics in a time-series database.
 It is an open-source software project, written in Go.
 Metrics are collected using HTTP pulls, allowing for higher performance and scalability.
