maint window and upgrade (#804)
* hide suma-only content
per feedback, see
https://github.com/SUSE/doc-susemanager/pull/781#discussion_r332868061
* use documentation.suse.com

--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -50,12 +50,15 @@ complete procedure, also see above:
     spacewalk-service start
 ////
 
-By default, several update channels are configured and enabled for the {susemgr} Server.
+By default, several update channels are configured and enabled for the {productname} Server.
 New and updated packages will become available automatically.
 
+ifeval::[{suma-content} == true]
 To keep {susemgr} up to date, either connect it directly to {scc} or use {rmtool} (RMT).
 You can use RMT as a local installation source for disconnected environments.
+endif::[]
 
+ifeval::[{suma-content} == true]
 You can check that the update channels are available on your system with this command:
 
 ----
@@ -80,7 +83,10 @@ SLE-Module-Server-Applications15-SP1-Updates           | Yes     | (r ) Yes  | Y
 SLE-Module-Web-Scripting15-SP1-Pool                    | Yes     | (r ) Yes  | No
 SLE-Module-Web-Scripting15-SP1-Updates                 | Yes     | (r ) Yes  | Yes
 ----
+endif::[]
 
+
+ifeval::[{suma-content} == true]
 {productname} releases maintenance updates (MUs) to provide newer packages.
 Maintenance updates are indicated with a new version number.
 For example, the major release 4.0 will be incremented to 4.0.1 when an MU is released.
@@ -95,6 +101,7 @@ You can also fetch the version number with the [literal]``api.getVersion()`` XML
 // ----
 // 
 // This procedure is also known as a Service Pack (SP) migration.
+endif::[]
 
 
 
