Update proxy-setup.adoc (#794)
* Update proxy-setup.adoc
Co-Authored-By: Lana Brindley <lbrindley@suse.de>

--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -144,14 +144,7 @@ To check the status of the proxy system and its clients, click the proxy system'
 [[proxy.pxe.sync]]
 === Synchronize Profiles and System Information
 
-To enable PXE boot through a proxy, additional software must be installed and configured on both the {productname} Server and the {susemgrproxy}.
-
-. On the {productname} Server install [package]#susemanager-tftpsync#:
-+
-
-----
-zypper in susemanager-tftpsync
-----
+To enable PXE boot through a proxy, additional software must be installed and configured on both the {susemgrproxy} and the  {productname} Server.
 
 . On the {susemgrproxy} install [package]#susemanager-tftpsync-recv#:
 +
@@ -160,7 +153,7 @@ zypper in susemanager-tftpsync
 zypper in susemanager-tftpsync-recv
 ----
 
-. Run the [command]``configure-tftpsync.sh`` setup script and enter the requested information:
+. On the {productname} Proxy, run the [command]``configure-tftpsync.sh`` setup script and enter the requested information:
 +
 
 ----
@@ -171,7 +164,14 @@ configure-tftpsync.sh
 It asks for hostname and IP address of the {productname} Server and of the proxy itself.
 Additionally, it asks for the tftpboot directory on the proxy.
 
-// 2019-08-23, ke: It is not clear what this means:
+. On the {productname} Server, install [package]``susemanager-tftpsync``:
++
+
+----
+zypper in susemanager-tftpsync
+----
+
+// same file name on the server and proxy!
 . On the {productname} Server, run [command]``configure-tftpsync.sh`` to configure the upload to the {susemgrproxy}:
 +
 
