--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -6,8 +6,7 @@ You can monitor your {productname} environment using Prometheus and Grafana.
 
 [NOTE]
 ====
-{productname} does not currently support monitoring with Prometheus in private, non-routable networks.
-Prometheus must be able to establish network communications with monitored clients.
+Prometheus fetches metrics using a pull mechanism, so it must be able to establish network communications with monitored clients.
 If your clients are using a non-routable network with a reserved IP range, they will not be able to be contact the Prometheus server.
 ====
 
