--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -151,7 +151,7 @@ Copying the data before you migrate can significantly reduce the amount of downt
 mgr-setup -r
 ----
 
-While the data migration is in progress, the database services will be shut down.
+While the data migration is in progress, the SUSE Manager services will be shut down.
 This is to ensure that no data is written to the database during the migration.
 
 
