Added note about logging

--- a/modules/administration/pages/kubernetes.adoc
+++ b/modules/administration/pages/kubernetes.adoc
@@ -49,6 +49,9 @@ This is specified in the [path]``kubeconfig`` file.
 The node data can take a few moments to update.
 You might need to refresh your browser window to see the updated information.
 
+Any connection or authentication problems are logged to [path]``gatherer.log``.
+
+
 [NOTE]
 ====
 Node data is not refreshed during registration.
