--- a/modules/client-configuration/pages/clients-rh.adoc
+++ b/modules/client-configuration/pages/clients-rh.adoc
@@ -269,7 +269,7 @@ endif::[]
 * In the [guimenu]``SLS Contents`` field, leave it empty.
 . Click btn:[Create Config Channel]
 . Click btn:[Create Configuration File]
-* In the [guimenu]``Filename/Path``` field type [systemitem]``/etc/yum/pluginconf.d/subscription-manager.conf``.
+* In the [guimenu]``Filename/Path`` field type [systemitem]``/etc/yum/pluginconf.d/subscription-manager.conf``.
 * In the [guimenu]``File Contents``` field type:
 ----
 [main]
