--- a/modules/client-configuration/pages/clients-rh.adoc
+++ b/modules/client-configuration/pages/clients-rh.adoc
@@ -270,7 +270,7 @@ endif::[]
 . Click btn:[Create Config Channel]
 . Click btn:[Create Configuration File]
 * In the [guimenu]``Filename/Path`` field type [systemitem]``/etc/yum/pluginconf.d/subscription-manager.conf``.
-* In the [guimenu]``File Contents``` field type:
+* In the [guimenu]``File Contents`` field type:
 ----
 [main]
 enabled=0
