--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -44,7 +44,7 @@ Some actions are not yet supported:
 Some preparation is required before you can register {ubuntu} clients to the {productname} Server.
 
 
-//ifeval::[{suma-content} == true]
+ifeval::[{suma-content} == true]
 
 Before you begin, ensure you have the {ubuntu} product enabled, and have synchronized the {ubuntu} channels for {scc}:
 
