Optional procedure + markup edits

--- a/modules/client-configuration/pages/clients-rh.adoc
+++ b/modules/client-configuration/pages/clients-rh.adoc
@@ -40,6 +40,8 @@ To avoid disruption, you will need to repeat this process at the end of every su
 It runs locally to track installed products and subscriptions.
 Clients must be registered with the subscription manager to obtain certificates.
 
+
+
 .Procedure: Registering Clients to Subscription Manager
 
 . On the client system, at the command prompt, register with the subscription manager tool:
@@ -117,6 +119,8 @@ This allows you to mirror only the content you need to manage your clients.
 You can only create custom versions of {redhat} repositories if you have the correct entitlements in your {redhat} Portal.
 ====
 
+
+
 .Procedure: Creating Custom Repositories
 
 . On the {productname} Server {webui}, navigate to menu:Software[Manage > Repositories].
@@ -134,6 +138,8 @@ For example, [systemitem]``https://cdn.redhat.com/content/dist/rhel/server/7/7Se
 
 
 When you have created the custom repositories, you can create corresponding custom channels.
+
+
 
 .Procedure: Creating Custom Channels
 
@@ -257,9 +263,17 @@ Ensure you use the correct {rhela} version:
 
 endif::[]
 
-== Optional: Disable {rhel} subscription-manager yum plugins
+You can choose to disable the {rhel} subscription-manager yum plugins.
+// Explain the use case.
 
-.Procedure: Create a configuration salt state to deploy the configuration file.
+The yum plugins are disabled with a configuration Salt state.
+
+.Procedure: Creating a Salt State to Deploy Configuration Files
+
+[NOTE]
+====
+This procedure is optional.
+====
 
 . On the {productname} Server {webui}, navigate to menu:Configuration[Channels].
 . Click btn:[Create State Channel]
@@ -292,7 +306,9 @@ configure_subscription-manager-disable-yum-plugins:
 ----
 . Click btn:[Update Configuration File]
 
-.Procedure: Create a system group for RHEL systems
+
+
+.Procedure: Creating a System Group for {rhel} Clients
 
 . On the {productname} Server {webui}, navigate to menu:Systems[System Groups].
 . Click btn:[Create Group]
@@ -309,7 +325,9 @@ configure_subscription-manager-disable-yum-plugins:
 
 If you already have RHEL systems added to ${productname}, assign them to the new system group, and then apply the highstate.
 
-.Procedure: Add the system group to your RHEL activation keys.
+
+
+.Procedure: Adding the System Group to Activation Keys
 
 You need to modify the activation keys you used for RHEL systems to include the system group created above.
 
@@ -352,6 +370,8 @@ Create the salt state and assign it to the organization.
 You can then use an activation key and configuration channels to deploy the key to the clients.
 
 endif::[]
+
+
 
 .Procedure: Adding Client Tools Channels
 
