--- a/modules/client-configuration/pages/clients-rh.adoc
+++ b/modules/client-configuration/pages/clients-rh.adoc
@@ -204,7 +204,7 @@ For more information about activation keys, see xref:client-configuration:client
 
 ifeval::[{suma-content} == true]
 
-Your {susemanager} subscription entitles you to the tools channels for {sleses} (also known as {redhat} Expanded Support or RES).
+Your {susemgr} subscription entitles you to the tools channels for {sleses} (also known as {redhat} Expanded Support or RES).
 You must use the client tools channel to create the bootstrap repository.
 This procedure applies to both traditional and Salt minions.
 
@@ -268,12 +268,14 @@ You can choose to disable the {rhel} subscription-manager yum plugins.
 
 The yum plugins are disabled with a configuration Salt state.
 
-.Procedure: Creating a Salt State to Deploy Configuration Files
-
 [NOTE]
 ====
 This procedure is optional.
 ====
+
+
+
+.Procedure: Creating a Salt State to Deploy Configuration Files
 
 . On the {productname} Server {webui}, navigate to menu:Configuration[Channels].
 . Click btn:[Create State Channel]
@@ -337,6 +339,8 @@ You need to modify the activation keys you used for RHEL systems to include the 
 . Check [systemitem]``Select rhel-systems```
 . Click btn:[Join Selected Groups]
 
+
+
 == Trust GPG Keys on Clients
 
 ifeval::[{suma-content} == true]
@@ -373,12 +377,9 @@ You can then use an activation key and configuration channels to deploy the key 
 
 
 
-.Procedure: Adding Client Tools Channels
-
-
 == Register Clients
 
-To register you {redhat} clients, you will need a bootstrap repository.
+To register your {redhat} clients, you will need a bootstrap repository.
 Create the bootstrap repository at the command prompt, with this command:
 
 ----
