--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -6,7 +6,7 @@ You can monitor your {productname} environment using Prometheus and Grafana.
 
 [NOTE]
 ====
-Prometheus fetches metrics using a pull mechanism, so it must be able to establish network communications to monitored clients.
+Prometheus fetches metrics using a pull mechanism, so the server must be able to establish network communications to monitored clients. Clients must have an open port and be reachable on the network.
 ====
 
 
