edits per feedback

--- a/modules/administration/pages/kubernetes.adoc
+++ b/modules/administration/pages/kubernetes.adoc
@@ -110,12 +110,12 @@ The updated data should now be available in the image list at menu:Images[Image 
 
 // This procedure needs help. LKB 2019-10-03
 .Procedure: Importing a Previously Deployed Image
-. In the {productname} {webui}, navigate to menu:Images[Image List], and upload the existing image that you want to import.
-. Add the registry owning the image as an image store.
+. In the {productname} {webui}, navigate to menu:Images[Image Stores].
+. Add the registry that owns the image you want to import, if it is not already there.
 . Navigate to menu:Images[Image List] and click btn:[Import].
-. Complete the fields and click btn:[Import].
+. Complete the fields, select the image store you created, and click btn:[Import].
 
-The updated data should now be available in the image list at menu:Images[Image List].
+The imported image should now be available in the image list at menu:Images[Image List].
 
 
 
