--- a/modules/client-configuration/pages/virt-vhm.adoc
+++ b/modules/client-configuration/pages/virt-vhm.adoc
@@ -1,7 +1,7 @@
-[[virt-vmware]]
-= Virtualization with VMWare
+[[virt-vhm]]
+= Virtual Host Managers
 
-You can use VMWare vSphere virtual machines, including ESXi and vCenter, with {productname} by setting up a virtual host manager (VHM).
+Virtual Host Managers (VHMs) are used to something something
 
 To begin, you will need to set up a VHM on your {productname} Server, and inventory the available VM hosts.
 Taskomatic can then begin data collection using the VMs API.
@@ -11,7 +11,7 @@ Taskomatic can then begin data collection using the VMs API.
 == VHM Setup
 
 
-The Virtual Host Manager (VHM) runs on the {productname} Server.
+The Virtal Host Manager (VHM) runs on the {productname} Server.
 
 To run a VHM, your {productname} Server will need to have port 443 open, in order to access the VMWare API.
 
@@ -39,20 +39,3 @@ For more on users, roles, and permissions, see the VMWare vSphere documentation:
 . On the [guimenu]``Properties`` page, click btn:[Refresh Data] to inventory the new VHM.
 
 To see which objects and resources have been inventoried, navigate to menu:Systems[System List > Virtual Systems].
-
-
-[NOTE]
-====
-Connecting to the ESXi server from a browser using HTTPS can sometimes log an ``invalid certificate`` error.
-If this occurs, refreshing the data from the virtual hosts server will fail.
-To correct the problem, extract the certificate from the ESXi server, and copy it to [path]``/etc/pki/trust/anchors``.
-Re-trust the certificate by running the [command]``update-ca-certificates`` command on the command line, and restart the spacewalk services.
-====
-
-After your VHM has been created and configured, Taskomatic will run data collection automatically.
-If you want to manually perform data collection, navigate to menu:Systems[Virtual Host Managers], select the appropriate VHM, and click btn:[Refresh Data].
-
-{productname} ships with a tool called [command]``virtual-host-gatherer`` that can connect to VHMs using their API, and request information about virtual hosts.
-[command]``virtual-host-gatherer`` maintains the concept of optional modules, where each module enables a specific VHM.
-This tool is automatically invoked nightly by Taskomatic.
-Log files for the [command]``virtual-host-gatherer`` tool are located at [path]``/var/log/rhn/gather.log``.
