more setup + initial vhm content

--- a/modules/client-configuration/pages/vhm-kubernetes.adoc
+++ b/modules/client-configuration/pages/vhm-kubernetes.adoc
@@ -1,11 +1,11 @@
 [[kubernetes]]
-= Kubernetes
+= VHM and Kubernetes
 
 You can use {productname} to manage {k8s} clusters.
 
 {productname} communicates with your {k8s} clusters using a virtual host manager.
 This allows {productname} to obtain and report information about your clusters, including the ability to do CVE audits, and report if containers are outdated.
-For more information on virtual host managers, see xref:client-configuration:virt-vmware.adoc[].
+For more information on virtual host managers, see xref:client-configuration:vhm.adoc[].
 
 
 To use {productname} with {k8s}, you will need to have your {productname} Server configured for container management, with all required channels present, and a registered container build host available.
