--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -14,7 +14,8 @@ ifndef::backend-pdf[]
 // Monitoring
 ** xref:monitoring.adoc[Monitoring]
 // Public Cloud
-** xref:public-cloud.adoc[Public Cloud]
+// This content is out of date, what isn't out of date is in the Install Guide. LKB 2019-10-14
+// ** xref:public-cloud.adoc[Public Cloud]
 // *** xref:public-cloud-azure.adoc[]
 // ISS
 ** xref:iss.adoc[Inter-Server Synchronization]
@@ -86,7 +87,6 @@ include::modules/administration/pages/live-patching-sles12.adoc[leveloffset=+2]
 include::modules/administration/pages/monitoring.adoc[leveloffset=+1]
 
 // Public Cloud
-
 include::modules/administration/pages/public-cloud.adoc[leveloffset=+1]
 // include::modules/administration/pages/public-cloud-azure.adoc[leveloffset=+1]
 
