--- a/modules/client-configuration/nav-client-config-guide.adoc
+++ b/modules/client-configuration/nav-client-config-guide.adoc
@@ -27,9 +27,9 @@ ifndef::backend-pdf[]
 *** xref:virt-xenkvm.adoc[Virtualization with Xen and KVM]
 *** xref:virt-vmware.adoc[Virtualization with VMWare]
 *** xref:virt-file.adoc[Virtualization with Other Hosts]
-*** xref:virt-vhm.adoc[Virtual Host Managers]
-// Containers
-** xref:kubernetes.adoc[Kubernetes]
+// VHMs
+** xref:vhm.adoc[Virtual Host Managers]
+*** xref:vhm-kubernetes.adoc[Kubernetes]
 //  Client Admin Tasks
 ** xref:channels.adoc[Channels]
 ifeval::[{suma-content} == true]
@@ -107,10 +107,10 @@ include::modules/client-configuration/pages/virt-vmware.adoc[leveloffset=+2]
 
 include::modules/client-configuration/pages/virt-file.adoc[leveloffset=+2]
 
-include::modules/client-configuration/pages/virt-vhm.adoc[leveloffset=+2]
+// VHMs
+include::modules/client-configuration/pages/vhm.adoc[leveloffset=+1]
 
-// Containers
-include::modules/administration/pages/kubernetes.adoc[leveloffset=+1]
+include::modules/administration/pages/vhm-kubernetes.adoc[leveloffset=+2]
 
 // Client Admin Tasks
 include::modules/client-configuration/pages/channels.adoc[leveloffset=+1]
