--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -99,7 +99,7 @@ For example:
 
 When you have created the repositories, you can create the custom channels.
 
-￼Ensure the custom channels you create have `AMD64 Debian` architecture.
+Ensure the custom channels you create have `AMD64 Debian` architecture.
 
 Your custom channels should use this structure:
 
