--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -93,7 +93,7 @@ For example:
 * In the [guimenu]``Repository URL`` field, type [systemitem]``http://ubuntumirror.example.com/ubuntu/dists/bionic-updates/main/binary-amd64/``.
 * In the [guimenu]``Repository Type`` field, select [systemitem]``deb``.
 * Leave all other fields as the default values.
-. Click btn:[Create Repository]
+. Click btn:[Create Repository].
 
 
 
