--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -43,8 +43,9 @@ Some actions are not yet supported:
 
 Some preparation is required before you can register {ubuntu} clients to the {productname} Server.
 
-
 ifeval::[{suma-content} == true]
+
+.Procedure: Adding client tools channels
 
 Before you begin, ensure you have the {ubuntu} product enabled, and have synchronized the {ubuntu} channels for {scc}:
 
@@ -64,11 +65,6 @@ The mandatory channels do not contain {ubuntu} upstream packages.
 The repositories and channels for synchronizing upstream content must be configured manually.
 ====
 
-
-
-== Repository and Channel Management
-
-
 In the {productname} {webui}, navigate to menu:Software[Channel List > All].
 Verify that you have a base channel and a child channel for your architecture.
 
@@ -76,8 +72,6 @@ For example:
 
 * Base channel: [systemitem]``ubuntu-18.04-pool for amd64``
 * Child channel: [systemitem]``Ubuntu-18.04-SUSE-Manager-Tools for amd64``
-
-
 
 .Procedure: Creating Custom Repositories
 
@@ -94,8 +88,6 @@ For example:
 * In the [guimenu]``Repository Type`` field, select [systemitem]``deb``.
 * Leave all other fields as the default values.
 . Click btn:[Create Repository].
-
-
 
 When you have created the repositories, you can create the custom channels.
 
@@ -115,7 +107,6 @@ When you have the channels set up, associate each channel with the appropriate r
 You need all the new channels fully syncronized before bootstraping any Ubuntu client.
 ====
 endif::[]
-
 
 
 ifeval::[{uyuni-content} == true]
