--- a/modules/upgrade/pages/db-migration.adoc
+++ b/modules/upgrade/pages/db-migration.adoc
@@ -77,7 +77,7 @@ However, if a fast upgrade fails, you must restore the database from the backup.
 A fast upgrade reduces the risk of running out of disk space.
 A regular upgrade will copy the database files instead of creating hard links between the files.
 
-PostgreSQL stores data at [path]``/var/lib/pgsql/data/``, and logs to [path]``/var/lib/pgsql/data/pg_xlog/``.
+PostgreSQL stores data at [path]``/var/lib/pgsql/data/``.
 
 .Procedure: Performing a Regular Upgrade
 . Perform a database backup.
