move disconnected setup to administration from client-config close https://github.com/SUSE/spacewalk/issues/9693

--- a/modules/installation/pages/network-requirements.adoc
+++ b/modules/installation/pages/network-requirements.adoc
@@ -53,6 +53,6 @@ This table gives an overview of required ports, to be used when you are setting 
 
 For more information on disconnected setup and port configuration, see:
 
-* xref:client-configuration:disconnected-setup.adoc#client-cfg-reg-with-bootstrap-disconnected[]
+* xref:administration:disconnected-setup.adoc#client-cfg-reg-with-bootstrap-disconnected[]
 
 * xref:installation:ports.adoc[]
