--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -18,6 +18,7 @@ ifndef::backend-pdf[]
 // Public Cloud
 ** xref:public-cloud.adoc[Public Cloud]
 // *** xref:public-cloud-azure.adoc[]
+*** xref:disconnected-setup.adoc[Disconnected Setup]
 // ISS
 ** xref:iss.adoc[Inter-Server Synchronization]
 ** Security
@@ -94,6 +95,8 @@ include::modules/administration/pages/kubernetes.adoc[leveloffset=+1]
 
 include::modules/administration/pages/public-cloud.adoc[leveloffset=+1]
 // include::modules/administration/pages/public-cloud-azure.adoc[leveloffset=+1]
+
+include::modules/client-configuration/pages/disconnected-setup.adoc[leveloffset=+2]
 
 // ISS
 include::modules/administration/pages/iss.adoc[leveloffset=+1]
