--- a/modules/administration/pages/reports.adoc
+++ b/modules/administration/pages/reports.adoc
@@ -77,7 +77,7 @@ This table lists the available reports:
 | MD5 Certificates | [command]``system-md5-certificates`` | All registered systems using certificates with an MD5 checksum.
 | Installed Packages | [command]``system-packages-installed`` | Packages installed on systems.
 | System Profiles | [command]``system-profiles`` | All systems registered to the server, with software and system group information.
-| Users in the System | [command]``users`` | All users registered to {productname}.
+| Users | [command]``users`` | All users registered to {productname}.
 | MD5 Users | [command]``users-md5`` | All users for all organizations using MD5 encrypted passwords, with their details and roles.
 | Systems administered | [command]``users-systems`` | Systems that individual users can administer.
 |===
