--- a/modules/administration/pages/reports.adoc
+++ b/modules/administration/pages/reports.adoc
@@ -79,7 +79,7 @@ This table lists the available reports:
 | System Profiles | [command]``system-profiles`` | All systems registered to the server, with software and system group information.
 | Users | [command]``users`` | All users registered to {productname}.
 | MD5 Users | [command]``users-md5`` | All users for all organizations using MD5 encrypted passwords, with their details and roles.
-| Systems administered | [command]``users-systems`` | Systems that individual users can administer.
+| Systems administered | [command]``users-systems`` | Clients that individual users can administer.
 |===
 
 For more information about an individual report, run [command]``spacewalk-report`` with the option [option]``--info`` or [option]``--list-fields-info`` and the report name.
