--- a/modules/administration/pages/reports.adoc
+++ b/modules/administration/pages/reports.adoc
@@ -30,7 +30,7 @@ This table lists the available reports:
 |===
 |Report | Invoked as | Description
 | Actions | [command]``actions`` | All actions.
-| Activation Keys | [command]``activation-keys`` | All activation keys, and the entitlements, channels, configuration channels, server groups, and packages associated with them.
+| Activation Keys | [command]``activation-keys`` | All activation keys, and the entitlements, channels, configuration channels, system groups, and packages associated with them.
 | Activation Keys: Channels | [command]``activation-keys-channels`` | All activation keys and the entities associated with each key.
 | Activation Keys: Configuration | [command]``activation-keys-config`` | All activation keys and the configuration channels associated with each key.
 | Activation Keys: Server Groups | [command]``activation-keys-groups`` | All activation keys and the system groups associated with each key.
