--- a/modules/administration/pages/reports.adoc
+++ b/modules/administration/pages/reports.adoc
@@ -48,7 +48,7 @@ This table lists the available reports:
 | Patches for Clients | [command]``errata-systems`` | Applicable patches and any registered clients that are affected.
 | Host Guests | [command]``host-guests`` | Host and guests mapping.
 | Inactive Clients | [command]``inactive-systems`` | Inactive clients.
-| System Inventory | [command]``inventory`` | Systems registered to the server, together with hardware and software information.
+| System Inventory | [command]``inventory`` | Clients registered to the server, together with hardware and software information.
 | Kickstart Scripts | [command]``kickstart-scripts`` | All kickstart scripts, with details.
 | Kickstart Trees | [command]``kickstartable-trees`` | Kickstartable trees.
 | All Upgradable Versions | [command]``packages-updates-all`` | All newer package versions that can be upgraded.
