--- a/modules/administration/pages/reports.adoc
+++ b/modules/administration/pages/reports.adoc
@@ -65,7 +65,7 @@ This table lists the available reports:
 | System Groups | [command]``system-groups`` | System groups.
 | Activation Keys for System Groups | [command]``system-groups-keys`` | Activation keys for system groups.
 | Systems in System Groups | [command]``system-groups-systems`` | Systems in system groups.
-| System Groups Users | [command]``system-groups-users`` | Report of system groups users.
+| System Groups Users | [command]``system-groups-users`` | System groups and users that have permissions on them.
 | History: System | [command]``system-history`` | Event history for each system.
 | History: Channels | [command]``system-history-channels`` | Channel event history.
 | History: Configuration | [command]``system-history-configuration`` | Configuration event history.
