--- a/modules/administration/pages/reports.adoc
+++ b/modules/administration/pages/reports.adoc
@@ -66,7 +66,7 @@ This table lists the available reports:
 | Activation Keys for System Groups | [command]``system-groups-keys`` | Activation keys for system groups.
 | Systems in System Groups | [command]``system-groups-systems`` | Systems in system groups.
 | System Groups Users | [command]``system-groups-users`` | System groups and users that have permissions on them.
-| History: System | [command]``system-history`` | Event history for each system.
+| History: System | [command]``system-history`` | Event history for each client.
 | History: Channels | [command]``system-history-channels`` | Channel event history.
 | History: Configuration | [command]``system-history-configuration`` | Configuration event history.
 | History: Entitlements | [command]``system-history-entitlements`` | System entitlement event history.
