--- a/modules/administration/pages/reports.adoc
+++ b/modules/administration/pages/reports.adoc
@@ -74,7 +74,7 @@ This table lists the available reports:
 | History: Kickstart | [command]``system-history-kickstart`` | Kickstart event history.
 | History: Packages | [command]``system-history-packages`` | Package event history.
 | History: SCAP | [command]``system-history-scap`` | OpenSCAP event history.
-| MD5 Certificates | [command]``system-md5-certificates`` | All registered systems using certificates with an MD5 checksum.
+| MD5 Certificates | [command]``system-md5-certificates`` | All registered clients using certificates with an MD5 checksum.
 | Installed Packages | [command]``system-packages-installed`` | Packages installed on systems.
 | System Profiles | [command]``system-profiles`` | All systems registered to the server, with software and system group information.
 | Users | [command]``users`` | All users registered to {productname}.
