--- a/modules/administration/pages/reports.adoc
+++ b/modules/administration/pages/reports.adoc
@@ -76,7 +76,7 @@ This table lists the available reports:
 | History: SCAP | [command]``system-history-scap`` | OpenSCAP event history.
 | MD5 Certificates | [command]``system-md5-certificates`` | All registered clients using certificates with an MD5 checksum.
 | Installed Packages | [command]``system-packages-installed`` | Packages installed on clients.
-| System Profiles | [command]``system-profiles`` | All systems registered to the server, with software and system group information.
+| System Profiles | [command]``system-profiles`` | All clients registered to the server, with software and system group information.
 | Users | [command]``users`` | All users registered to {productname}.
 | MD5 Users | [command]``users-md5`` | All users for all organizations using MD5 encrypted passwords, with their details and roles.
 | Systems administered | [command]``users-systems`` | Clients that individual users can administer.
