--- a/modules/administration/pages/reports.adoc
+++ b/modules/administration/pages/reports.adoc
@@ -64,7 +64,7 @@ This table lists the available reports:
 | System Extra Packages | [command]``system-extra-packages`` | All packages installed on all clients that are not available from channels the client is subscribed to.
 | System Groups | [command]``system-groups`` | System groups.
 | Activation Keys for System Groups | [command]``system-groups-keys`` | Activation keys for system groups.
-| Systems in System Groups | [command]``system-groups-systems`` | Systems in system groups.
+| Systems in System Groups | [command]``system-groups-systems`` | Clients in system groups.
 | System Groups Users | [command]``system-groups-users`` | System groups and users that have permissions on them.
 | History: System | [command]``system-history`` | Event history for each client.
 | History: Channels | [command]``system-history-channels`` | Channel event history.
