--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -45,10 +45,10 @@ For additional information on setting up Portus as a registry provider, see the 
 ====
 +
 
-For more information on Containers or CaaS Platform, see:
+For more information on Containers or {caasp}, see:
 
-* https://www.suse.com/documentation/sles-15/book_sles_docker/data/book_sles_docker.html[SUSE Linux Enterprise Server Docker Guide]
-* https://www.suse.com/documentation/suse-caasp-4/[SUSE CaaS Platform 4 Documentation]
+* https://documentation.suse.com/sles/15-SP1/html/SLES-all/book-sles-docker.html
+* https://documentation.suse.com/suse-caasp/4/
 
 
 
