--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -32,8 +32,8 @@ See xref:upgrade:migrate-4x-4x.adoc[].
 For information about database schema upgrades and PostgreSQL migrations, see xref:upgrade:db-migration.adoc[].
 
 You can install updates using your package manager.
-For information on using {yast}, see https://www.suse.com/documentation/sles-15/book_sle_admin/data/cha_onlineupdate_you.html).
-For information on using zypper, see https://www.suse.com/documentation/sles-15/book_sle_admin/data/sec_zypper.html).
+For information on using {yast}, see https://documentation.suse.com/sles/15-SP1/html/SLES-all/cha-onlineupdate-you.html.
+For information on using zypper, see https://documentation.suse.com/sles/15-SP1/html/SLES-all/cha-sw-cl.html#sec-zypper.
 
 ////
 Preferable, you will run such a tool within a maintenance window; for more information, see xref:administration:maintenance-window.adoc#maintenance-window[].
@@ -95,11 +95,11 @@ You can verify which version you are running by looking at the bottom of the nav
 You can also fetch the version number with the [literal]``api.getVersion()`` XMLRPC API call.
 
 // To upgrade to the latest MU, you can use the [command]``zypper migration`` command at the command prompt:
-// 
+//
 // ----
 // zypper migration
 // ----
-// 
+//
 // This procedure is also known as a Service Pack (SP) migration.
 endif::[]
 
