--- a/modules/administration/pages/live-patching-sles12.adoc
+++ b/modules/administration/pages/live-patching-sles12.adoc
@@ -3,7 +3,7 @@
 
 
 On {slsa}{nbsp}12 systems, live patching is managed by kGraft.
-For in depth information covering kGraft use, see https://www.suse.com/documentation/sles-12/singlehtml/book_sle_admin/book_sle_admin.html#cha.kgraft.
+For in depth information covering kGraft use, see https://documentation.suse.com/sles/12-SP4/html/SLES-all/cha-kgraft.html.
 
 Before you begin, ensure:
 
