--- a/modules/reference/pages/systems/autoinst-distributions.adoc
+++ b/modules/reference/pages/systems/autoinst-distributions.adoc
@@ -7,10 +7,15 @@ The [guimenu]``Distributions`` page enables you to find and create custom instal
 ====
 The [guimenu]``Distributions`` page does not display distributions already provided.
 They can be found within the [guimenu]``Distribution`` drop-down menu of the [guimenu]``Autoinstallation Details`` page.
-
-Installation data must be made available prior to creating a distribution, as described in the [ref]_SUSE Linux Enterprise Deployment Guide_ link:https://www.suse.com/documentation/sles-15/singlehtml/book_sle_deployment/book_sle_deployment.html#part.installserver[{sle} Deployment Guide] or, respectively, link:https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/7/html/installation_guide/chap-kickstart-installations[{rhel} Installation Guide : chap-kickstart-installations]
-This tree must be located in a local directory on the {productname} server.
 ====
+
+For more information about installing SUSE distributions, see https://documentation.suse.com/sles/15-SP1/html/SLES-all/book-sle-deployment.html.
+
+For more information about installing Red Hat distributions, see https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/7/html/installation_guide/chap-kickstart-installations.
+
+The installation tree must be located in a local directory on the {productname} Server.
+
+
 
 .Procedure: Creating a Distribution for Autoinstallation
 . To create a distribution, on the [guimenu]``Autoinstallable Distributions`` page click [guimenu]``Create Distribution`` in the upper right corner.
@@ -61,4 +66,4 @@ In {ay} profiles you can use such variables as well.
 
 Using variables are just one part of the larger Cobbler infrastructure for creating templates that can be shared between multiple profiles and systems.
 
-For more information about Cobbler and templates, see xref:client-configuration:cobbler.adoc[].  
+For more information about Cobbler and templates, see xref:client-configuration:cobbler.adoc[].
